--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,5 +1,6 @@
 <!--Luis Giuliani-->
 <!-- your html code here -->
+<div class="container-fluid bg-white">
     <div class="d-flex border-top pt-5">
         <div class="flex-grow-1 ms-3">
             <h1 class="d-flex">This First Heading <p class="text-secondary ps-3"> Will Catch Your Eye</p></h1>
@@ -9,4 +10,5 @@
             <img id="Heading01image" src="https://c.wallhere.com/photos/92/50/1920x1080_px_Breaking_Bad_heisenberg_Walter_White-565875.jpg!d" alt="...">
           </div>
     </div>
+</div>
    
